# MrHuxAlphaBot1

./: .env  .env.example  .env.template  .gitignore  API_SETUP_GUIDE.md  BOT_CAPABILITIES.md  BUTTON_DRIVEN_INTERFACE_UPDATE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SPLIT_SERVICES.md  DEPLOY_FREE.md  Dockerfile  FINAL_IMPLEMENTATION_REPORT.md  FINAL_LAUNCH_READY_REPORT.md  LOCAL_FREE_SETUP.md  Procfile.bot  QUICK_START.md  README.md  USER_GUIDE.md  alembic.ini  bot.py  bot_session.session  demo_add_group_username.py  demo_print_bot_config.py  deploy.py  deploy_bot.py  docker-compose.yml  env.example  get_id_session.session  hux_alpha_bot.session  monitoring_tokens.json  mr_hux_alpha_bot.db  mr_hux_alpha_bot.session  pyproject.toml  railway.json  render.yaml  requirements.txt  run_bot_local.bat  run_local.py  setup.py  setup_bot.py  (+5 more)
.github/workflows/: ci-cd.yml
DOCS/: API_FIX_COMPLETION_REPORT.md  API_REAL_SETUP_COMPLETION_REPORT.md  ARCHITECTURE.md  BOT_COMPLETION_REPORT.md  Context.md  DASHBOARD_README.md  HUNTING_IMPLEMENTATION_COMPLETE.md  PROJECT_COMPLETION_REPORT.md  README.md  RENAMING_COMPLETION_REPORT.md  SCANNING_IMPLEMENTATION_COMPLETE.md  monitoring.md
alembic/: env.py
examples/: bot_demo.py  complete_and_run.py  complete_bot_setup.py  fix_scanning_sources.py  hunting_demo.py  hunting_verification.py
scripts/: add_mrhualpha_output_channel.py  add_notification_channel.py  add_telegram_output_channel.py  fix_output_channel_types.py  get_group_id.py  list_active_sources.py  purge_output_channels.py  send_test_alert.py  setup_database.py  setup_notification_channel.py  setup_telegram_bot.py  test_telegram.py
src/: __init__.py  database.py  main.py
tests/: # Code Citations.md  conftest.py  test_add_group_feature.py  test_bot_functionality.py  test_hunting_features.py  test_new_features.py  test_scanning.py  test_scanning_features.py  test_telegram_dashboard.py  test_token_analysis.py
(+134 files in other folders)
