[tool.poetry]
name = "sma-telebot"
version = "0.1.0"
description = "Solana Market Alpha Telegram Bot"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.28.0"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.0"
alembic = "^1.11.0"
pydantic = "^1.10.0"
httpx = "^0.24.0"
redis = "^4.5.0"
loguru = "^0.7.0"
python-telegram-bot = "^20.3"
asyncpg = "^0.27.0"
beautifulsoup4 = "^4.12.0"
uvicorn = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
